<resources>
    <string name="app_name">Cocktails</string>
    <string name="hint_word">Type ingredient\'s name…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Ingredient not saved because it is empty.</string>

    //cocktail activities
    <string name="cocktail_name">Cocktail Name: </string>
    <string name="cocktail_ingredient">Ingredients: </string>
    <string name="cocktail_instruction">Instructions: </string>
    <string name="cocktail_descriptionImg">Image describing the cocktail</string>
    <string name="cocktail_filter">Filter by: </string>
    <string name="add_missing_items">Add missing items to the shopping list</string>

    //dropdown list in cocktail list activity: filter
    <string name="filter_prompt">Choose a filter</string>
    <string-array name="filter_names">
        <item>Letter</item>
        <item>Alcoholic</item>
        <item>Category</item>
    </string-array>

    //Tabs name
    <string name="tab_text_1">Inventory</string>
    <string name="tab_text_2">Cocktails</string>
    <string name="tab_text_3">Shopping List</string>

    //dropdown list unit for ingredients
    <string name="unit_prompt">Choose a unit</string>
    <string-array name="unit_names">
        <item>oz</item>
        <item>tsp</item>
        <item>tblsp</item>
        <item>cl</item>
        <item>dash</item>
        <item>part</item>
        <item></item>
    </string-array>

    //search function
    <string name="searchTxt">What are you looking for?</string>
    <string name="inputSearch">Name</string>
    <string name="ingredientBtn">Ingredient</string>
    <string name="cocktailBtn">Cocktail</string>
    <string name="searchBtn">Search</string>
    <string name="_default_qty">0</string>
    <string name="selected_quantity">Selected quantity:</string>
    <string name="my_favorite">My favorites</string>
    <string name="favorite">favorite</string>
    <string name="default_cocktail_image">Default Cocktail Image</string>
    <string name="edit_button">Edit Button</string>
    <string name="starfavorite">starFavorite</string>
    <string name="delete_button">Delete Button</string>
    <string name="no_ingredient">No Ingredients</string>
    <string name="no_cocktail">No Cocktails</string>


</resources>
