<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_word"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_word"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textQuantity"
        android:layout_width="59dp"
        android:layout_height="35dp"
        android:layout_marginTop="192dp"
        android:text="@string/_default_qty"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="121dp"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="192dp"
        android:text="@string/selected_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/simpleSeekBar"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="51dp"
        android:max="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:background="@color/colorPrimary"
        android:onClick="onClickSave"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/unitChoice"
        android:layout_width="128dp"
        android:layout_height="37dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="51dp"
        android:entries="@array/unit_names"
        android:prompt="@string/unit_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textQuantity"
        app:layout_constraintTop_toBottomOf="@+id/edit_word" />

</androidx.constraintlayout.widget.ConstraintLayout>
